jellyfin_stack/prowlarr/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: prowlarr
  namespace: jellyfin
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 9696
  selector:
    app: prowlarr
