jellyfin_stack/prowlarr/traefik.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: prowlarr
  namespace: jellyfin

spec:
  entryPoints:
  - websecure
  routes:
  - match: Host(`prowlarr.home.sparhomelab.dev`) # change to your domain
    kind: Rule
    services:
    - name: prowlarr
      port: 80
    middlewares:
    - name: default-headers-jellyfin
  tls:
    secretName: prowlarr-tls
